onMouse events for desktop only and fix bug for mobile not allowing the dropdown to render properly on mobile

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -443,11 +443,7 @@ td:last-child {
 /* ------------------------------------------------------------------- 
  * ## Spacing 
  * ------------------------------------------------------------------- */
-fieldset,
-button,
-.btn {
-  margin-bottom: 1.6rem;
-}
+
 
 input,
 textarea,
